--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
-<body>
+<body>   
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" id="up">
   <div class="container"> <a class="navbar-brand" href="#">WFS&S</a>
@@ -55,9 +55,12 @@
                   <div class="col s4">
                     <div class="card-content">
                       <h4 class="card-title prim">Digital Learning Framework</h4>
-                      <p>A curriculum framework is an organized plan or set of standards or learning outcomes that defines the content to be learned in terms of clear, definable standards of what the student should know and be able to do. A curriculum framework is part of an outcome-based education or standards based education reform design.</p>
+                      <p>A curriculum framework is an organized plan or set of learning outcomes that defines the content to be learned in terms of clear, definable standards of what the student should know and be able to do. A curriculum framework is part of an outcome-based education or standards based education reform design.
+						The framework is the second step, defining clear, high standards which will be achieved by all learners.
+						</p>
+					
                     </div>
-                    <div class="card-action"> <a class="venobox waves-effect waves-light btn-small" data-vbtype="iframe" target="_blank" href="#up"> <i class="material-icons left">Play movie</i> </a> </div>
+<!--                    <div class="card-action"> <a class="venobox waves-effect waves-light btn-small" data-vbtype="iframe" target="_blank" href="#up"> <i class="material-icons left">Play movie</i> </a> </div>-->
                   </div>
                   <div class="col s8">
                     <div class="card-content">
