--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ WBT has many aliases such as e-learning, Internet-based training (IBT) and dista
                       <p>
 						  <strong>An instructional video is any video that demonstrates a process, transfers knowledge, explains a concept, or shows someone how to do something.
 
-Creating instructional videos isn’t limited to instructional design professionals. At least, not anymore. Anyone, in any industry, can (and probably should) create instructional videos.</strong>
+Creating instructional videos isn’t limited to instructional design professionals. At least, not anymore. </strong>
 						</p>
 					
                     </div>
