--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@ WBT has many aliases such as e-learning, Internet-based training (IBT) and dista
             </section>
 			  
 			  
-            <section id="idv" class="prim section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+            <section class="prim section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
               <div  class="card">
                 <div class="row">
                   <div class="col s4">
                     <div class="card-content">
-                      <h4 class="card-title"><strong>Instructional Video</strong></h4>
+                      <h4 id="idv" class="card-title"><strong>Instructional Video</strong></h4>
                       <p>
 						  <strong>An instructional video is any video that demonstrates a process, transfers knowledge, explains a concept, or shows someone how to do something.
 
