--- a/other.html
+++ b/other.html
@@ -74,7 +74,7 @@ content.
 	MyFeedback Training Example </strong>
 							<br>
 							<br>
-							<p>Enables the employees to give and receive feedback. The goal is to empoert employees to drive their own development and performance.  </p>
+							<p>Enables the employees to give and receive feedback. The goal is to empower employees to drive their own development and performance.  </p>
 							
 
 						<br>
