--- a/ivdeo.html
+++ b/ivdeo.html
@@ -61,9 +61,9 @@
                     <div class="card-content">
                       <h4 id="idv" class="card-title"><strong>Instructional Video</strong></h4>
                       <p>
-						  <strong>An instructional video is any video that demonstrates a process, transfers knowledge, explains a concept, or shows someone how to do something.
+						  <strong>An instructional video helps companies guide their customers through complications and difficult situations with a simple and well informed visual. Instructional videos help provide knowledge of a product or its working method to the clients in an interactive, effective and engaging way
 
-Creating instructional videos isn’t limited to instructional design professionals. At least, not anymore. </strong>
+ailed video that gives instructions step by step to teach it’s audience something and make learning more effective. An instructional video is meant to teach, describe or demonstrate something, in particular, to resolve an issue or achieve an outcome. </strong>
 						</p>
 					
                     </div>
