--- a/wbt.html
+++ b/wbt.html
@@ -31,8 +31,8 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
-        <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span> </a> </li>
-        <li class="nav-item"> <a class="nav-link" href="wbt.html">Web-Based Training</a> </li>
+        <li class="nav-item "> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span> </a> </li>
+        <li class="nav-item active"> <a class="nav-link" href="wbt.html">Web-Based Training</a> </li>
         <li class="nav-item"> <a class="nav-link" href="sft.html">Software Training</a> </li>
         <li class="nav-item"> <a class="nav-link" href="ivdeo.html">(Instructional) Video</a> </li>
         <li class="nav-item"> <a class="nav-link" href="other.html">Other</a> </li>
