--- a/other.html
+++ b/other.html
@@ -57,7 +57,7 @@
                   <div class="col s4">
                     <div class="card-content">
                       <h4 class="card-title" id="ott"><strong>Other</strong></h4>
-						 <h4 id="" class="card-title" >Mobile learning design guide</h4>
+						 <h4 class="card-title" ><strong>Mobile learning design guide</strong></h4>
 						<strong>Mobile learning is not a replacement for traditional learning methods or e-learning courses. More often,
 mobile learning can supplement and reinforce traditional or formal learning events with informal learning
 content.
