--- a/wbt.html
+++ b/wbt.html
@@ -27,7 +27,7 @@
 <body>   
 <!-- Navigation -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark " data-spy="affix" data-offset-top="197">
-  <div class="container"> <a class="navbar-brand" href="#">Workforce Strategies & Solution</a>
+  <div class="container"> <a class="navbar-brand" href="index.html">Workforce Strategies & Solution</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
