--- a/other.html
+++ b/other.html
@@ -34,8 +34,7 @@
       <ul class="navbar-nav ml-auto nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
         <li class="nav-item "> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span> </a> </li>
         <li class="nav-item"> <a class="nav-link" href="wbt.html">Web-Based Training</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="sft.html">Software Training</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="ivdeo.html">(Instructional) Video</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="ivdeo.html">Video</a> </li>
         <li class="nav-item active"> <a class="nav-link" href="other.html">Other</a> </li>
       </ul>
     </div>
