--- a/ivdeo.html
+++ b/ivdeo.html
@@ -68,7 +68,8 @@
                     <div class="card-content">
                       <h4 class="card-title"><strong>PME Qualifizierung</strong></h4>
                       <p>
-						  <strong>PME Qualifizierung</strong>
+						  <strong>Slideshow impressions of learning paths developed on the Digital Learning Framework approach
+</strong>
 						</p>
 					
                     </div>
