--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 <body>   
 <!-- Navigation -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark " data-spy="affix" data-offset-top="197">
-  <div class="container"> <a class="navbar-brand" href="index.html">Digital Learning Demo Platform</a>
+  <div class="container"> 
+	  
+	  <a class="navbar-brand" href="#">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Deloitte_Logo.png/640px-Deloitte_Logo.png" width="200" alt="logo">
+        </a>
+	  
+	  <a class="navbar-brand" href="index.html">Digital Learning Demo Platform</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
