update new viideo

--- a/ivdeo.html
+++ b/ivdeo.html
@@ -177,9 +177,9 @@
                 <div class="row">
                   <div class="col s4">
                     <div class="card-content">
-                      <h4 class="card-title"><strong>MyFeedback Video</strong></h4>
+                      <h4 class="card-title"><strong>MyFeedback IT Solution</strong></h4>
                       <p>
-						  <strong>What's new with MyFeedback</strong>
+						  <strong>The digital learning sample represents a "software video* that includes interactive screencasting elements and voice over</strong>
 						</p>
 					
                     </div>
@@ -189,7 +189,7 @@
                   <div class="col s8">
                     <div class="card-content">
                       <video class="responsive-video" controls>
-                        <source src="video/whatsnewfeed.mp4" type="video/mp4">
+                        <source src="video/IT Solution.mp4" type="video/mp4">
                       </video>
                     </div>
                   </div>
