--- a/ivdeo.html
+++ b/ivdeo.html
@@ -103,7 +103,7 @@
                       <p>
 						  <strong>Digital Learning Framework</strong>
 						</p>
-					
+					<p>German Version</p>
                     </div>
 <!--                    <div class="card-action"> <a class="venobox waves-effect waves-light btn-small" data-vbtype="iframe" target="_blank" href="#up"> <i class="material-icons left">Play movie</i> </a> </div>-->
 					   <div class="card-action"> </div>
@@ -112,6 +112,31 @@
                     <div class="card-content">
                       <video class="responsive-video" controls>
                         <source src="video/framework_1.mp4" type="video/mp4">
+                      </video>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+			  
+			    <section class="prim section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+              <div  class="card">
+                <div class="row">
+                  <div class="col s4">
+                    <div class="card-content">
+                      <h4 class="card-title"><strong>Framework</strong></h4>
+                      <p>
+						  <strong>Digital Learning Framework</strong>
+						</p>
+					<p>English Version</p>
+                    </div>
+<!--                    <div class="card-action"> <a class="venobox waves-effect waves-light btn-small" data-vbtype="iframe" target="_blank" href="#up"> <i class="material-icons left">Play movie</i> </a> </div>-->
+					   <div class="card-action"> </div>
+                  </div>
+                  <div class="col s8">
+                    <div class="card-content">
+                      <video class="responsive-video" controls>
+                        <source src="video/framework_eng.mp4" type="video/mp4">
                       </video>
                     </div>
                   </div>
