--- a/ivdeo.html
+++ b/ivdeo.html
@@ -103,7 +103,7 @@
                       <p>
 						  <strong>Digital Learning Framework</strong>
 						</p>
-					<p>German Version</p>
+					<p>Deutsche Version</p>
                     </div>
 <!--                    <div class="card-action"> <a class="venobox waves-effect waves-light btn-small" data-vbtype="iframe" target="_blank" href="#up"> <i class="material-icons left">Play movie</i> </a> </div>-->
 					   <div class="card-action"> </div>
@@ -152,7 +152,7 @@
                       <h4 id="idv" class="card-title"><strong>My Learn Space</strong></h4>
                       <p>
 						  <strong>
-							  <p>Your one-stop-shop to access all finance learnings</p>
+							  <p>Your one-stop-shop to access all finance learning</p>
 							   </strong>
 						</p>
 					
@@ -205,7 +205,7 @@
                     <div class="card-content">
                       <h4 class="card-title"><strong>MyFeedback IT Solution</strong></h4>
                       <p>
-						  <strong>The digital learning sample represents a "software video* that includes interactive screencasting elements and voice over</strong>
+						  <strong>The digital learning sample represents a "software video* that includes interactive screen casting elements and voice over</strong>
 						</p>
 					
                     </div>
