--- a/about.html
+++ b/about.html
@@ -40,17 +40,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <ul class="nav navbar-nav pull-right mainNav">
                     <li><a href="index.html">Home</a></li>
                     <li class="active"><a href="about.html">About</a></li>
-                   	<li><a href="services.html">Services</a></li>
-					<li><a href="price.html">Price</a></li>
-					<li><a href="projects.html">Projects</a></li>
+                   	<li></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="sidebar-right.html">Right Sidebar</a></li>
-                            <li><a href="#">Dummy Link1</a></li>
-                            <li><a href="#">Dummy Link2</a></li>
-                            <li><a href="#">Dummy Link3</a></li>
-                        </ul>
+                   	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="../eLearning.html">eLearning Programs</a></li>
+							<li><a href="../Video.html">Videos</a></li>
+							<li><a href="../other.html">Other</a></li>
+						</ul>
+					</li>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -74,46 +72,24 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <section class="container">
         <div class="row">
             <!-- main content -->
-            <section class="col-sm-8 maincontent">
-                <h3>Our Company</h3>
-                <p>
-                    <img src="assets/images/about.jpg" alt="" class="img-rounded pull-right" width="300">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente.
-                </p>
-                <p>Consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente.</p>
-                <h3>Our Achievements</h3>
-                <strong>2015</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
-                <strong>2013</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
-                <strong>2012</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
-                <strong>2011</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
-            </section>
+            <section class="col-sm-8 maincontent col-lg-12">
+                <h3>What the modern learner demands from us:</h3>
+                <p> <img src="assets/images/Learner.png" alt="" class="img-rounded pull-right" width="300"> 
+              <ul>
+				<li><strong><span class="strong" style="color:#86BC25">More micro learnings:</strong></span> &nbsp; A limited attention span requires attention well used. Learning nuggets should not exceed six minutes per nugget.&nbsp;</li>
+              <li><strong><span class="strong" style="color:#86BC25">An aligned and productive workplace:</strong></span> &nbsp; Disruptions need to be avoided or limited.&nbsp;</li>
+              <li><strong><span class="strong" style="color:#86BC25">More mobile learning:</strong></span> &nbsp; Step away from classroom and LMS based learning offers only. The modern learner is ‘always on’ and requires content whenever and wherever needed.&nbsp;</li>
+              <li><strong><span class="strong" style="color:#86BC25">More learning opportunities:</strong></span> &nbsp; Time to spend on training is not sufficient. Why? Because learning nowadays still requires stepping back from business obligations. We need to embed learning into business, into the flow of work.&nbsp;</li>
+                <li><strong><span class="strong" style="color:#86BC25">Acknowledgement of the willingness to learn:</strong></span> &nbsp; Offer a greater variety of different learning possibilities, e.g. micro and macro, formal and informal learning etc. </li>
+				</ul>
+				</p>
+<p>&nbsp;</p>
+              <h3>Our Framework</h3>
+              <p>&nbsp;</p>
+            <span style="color: #86BC25"><img src="assets/images/Framework.png" alt=""/></span>            </section>
             <!-- /main -->
 
-            <!-- Sidebar -->
-            <aside class="col-sm-4 sidebar sidebar-right">
-
-                <div class="panel">
-                    <h4>Latest News</h4>
-                    <ul class="list-unstyled list-spaces">
-                        <li><a href="">Responsive Design</a><br>
-                            <span class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</span></li>
-                        <li><a href="">HTML5, CSS3 and JavaScript</a><br>
-                            <span class="small text-muted">Consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam</span></li>
-                        <li><a href="">Bootstrap</a><br>
-                            <span class="small text-muted">Eveniet, consequuntur eius repellendus eos aliquid molestiae ea</span></li>
-                        <li><a href="">Clean Template</a><br>
-                            <span class="small text-muted">Sed, mollitia earum debitis est itaque esse reiciendis amet cupiditate.</span></li>
-                        <li><a href="">Premium Quality</a><br>
-                            <span class="small text-muted">Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.</span></li>
-                    </ul>
-                </div>
-
-            </aside>
-            <!-- /Sidebar -->
+            <!-- Sidebar -->            <!-- /Sidebar -->
 
         </div>
     </section>
@@ -122,98 +98,29 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Our Team</h3>
-                    <p>Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.</p>
-                    <br />
+                    <h3>We use a Structured ADDIE metodology</h3>
+                  <p>Based on our experience, we use the following process model* for the conception and development of digital learning solutions.</p>
+                  <p>&nbsp;</p>
+                    <img src="assets/images/Addie.png" alt=""/>
+<p>&nbsp;</p>
+					<div class="row">
+              <div class="col-md-12">
+                    <h3>Our approach to training content analysis and target group-oriented design</h3>
+                  <p>Based on a comprehensive analysis of processes, tasks, tools and materials, role-specific digital learning journeys are developed
+</p>
+                  <p>&nbsp;</p>
+                  <img src="assets/images/Approach.png" alt=""/>
+<p>&nbsp;</p>
+                  <br />
+                </div>
+                  <br />
                 </div>
             </div>
-            <div class="row">
-
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <!-- Team Member -->
-                    <div class="team-member">
-                        <!-- Image Hover Block -->
-                        <div class="member-img">
-                            <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-1.jpg" alt="">
-                        </div>
-                        <!-- Member Details -->
-                        <h4>John Doe</h4>
-                        <!-- Designation -->
-                        <span class="pos">CEO</span>
-                        <div class="team-socials">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <!-- Team Member -->
-                    <div class="team-member pDark">
-                        <!-- Image Hover Block -->
-                        <div class="member-img">
-                            <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-2.jpg" alt="">
-                        </div>
-                        <!-- Member Details -->
-                        <h4>Larry Doe</h4>
-                        <!-- Designation -->
-                        <span class="pos">Director</span>
-                        <div class="team-socials">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <!-- Team Member -->
-                    <div class="team-member pDark">
-                        <!-- Image Hover Block -->
-                        <div class="member-img">
-                            <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-3.jpg" alt="">
-                        </div>
-                        <!-- Member Details -->
-                        <h4>Ranith Kays</h4>
-                        <!-- Designation -->
-                        <span class="pos">Manager</span>
-                        <div class="team-socials">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <!-- Team Member -->
-                    <div class="team-member pDark">
-                        <!-- Image Hover Block -->
-                        <div class="member-img">
-                            <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-4.jpg" alt="">
-                        </div>
-                        <!-- Member Details -->
-                        <h4>Joan Ray</h4>
-                        <!-- Designation -->
-                        <span class="pos">Creative</span>
-                        <div class="team-socials">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
-                        </div>
-                    </div>
+    
+                  <br />
                 </div>
             </div>
+  </div>
         </div>
     </section>
     <footer id="footer"> 
@@ -226,9 +133,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <p class="simplenav">
 								<a href="index.html">Home</a> | 
 								<a href="about.html">About</a> |
-								<a href="services.html">Services</a> |
-								<a href="price.html">Price</a> |
-								<a href="projects.html">Projects</a> |
 								<a href="contact.html">Contact</a>
 							</p>
                         </div>
@@ -237,8 +141,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="col-md-6 panel">
                         <div class="panel-body">
                             <p class="text-right">
-                                Copyright &copy; 2015. Template by <a href="http://webthemez.com/" rel="develop">WebThemez.com</a>
-                            </p>
+                            Digital Learning Deloitte&nbsp; </p>
                         </div>
                     </div>
 
