--- a/Video.html
+++ b/Video.html
@@ -36,9 +36,9 @@
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li><a href="../Testerdc/index.html">Home</a></li>
 					<li><a href="../Testerdc/about.html">About</a></li>
-						<li><a href="../Testerdc/services.html">Services</a></li>
-					<li><a href="../Testerdc/price.html">Price</a></li>
-					<li class="active"><a href="../Testerdc/projects.html">Projects</a></li>
+						<li></li>
+					<li></li>
+					<li class="active"></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
@@ -212,36 +212,34 @@
 	</section>
 	<!-- /container -->
 
-	<footer id="footer"> 
-		<div class="footer2">
-			<div class="container">
-				<div class="row">
 
-					<div class="col-md-6 panel">
-						<div class="panel-body">
-							<p class="simplenav">
-								<a href="../Testerdc/index.html">Home</a> | 
-								<a href="../Testerdc/about.html">About</a> |
-								<a href="../Testerdc/services.html">Services</a> |
-								<a href="../Testerdc/price.html">Price</a> |
-								<a href="../Testerdc/projects.html">Projects</a> |
-								<a href="../Testerdc/contact.html">Contact</a>
+	 <footer id="footer"> 
+        <div class="footer2">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-md-6 panel">
+                        <div class="panel-body">
+                            <p class="simplenav">
+								<a href="index.html">Home</a> | 
+								<a href="about.html">About</a> |
+								<a href="contact.html">Contact</a>
 							</p>
-						</div>
-					</div>
+                        </div>
+                    </div>
 
-					<div class="col-md-6 panel">
-						<div class="panel-body">
-							<p class="text-right">
-								Copyright &copy; 2015. Template by <a href="http://webthemez.com/" rel="develop">WebThemez.com</a>
-							</p>
-						</div>
-					</div>
+                    <div class="col-md-6 panel">
+                        <div class="panel-body">
+                            <p class="text-right">
+                            Digital Learning Deloitte&nbsp; </p>
+                        </div>
+                    </div>
 
-				</div>
-				<!-- /row of panels -->
-			</div>
-		</div>
+                </div>
+                <!-- /row of panels -->
+            </div>
+        </div>
+    </footer>
 	</footer>
 
 
