--- a/Other.html
+++ b/Other.html
@@ -29,8 +29,8 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-				<a class="navbar-brand" href="../Testerdc/index.html">
-					<img src="../Testerdc/assets/images/logo.png" alt="Techro HTML5 template"></a>
+				<a class="navbar-brand" href="../Deloitte/index.html">
+					<img src="../Deloitte/assets/images/logo.png" alt="Techro HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
@@ -42,9 +42,9 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="../Testerdc/eLearning.html">eLearning Programs</a></li>
-							<li><a href="../Testerdc/Video.html">Videos</a></li>
-							<li><a href="../Testerdc/other.html">Other</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/eLearning.html">eLearning Programs</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/Video.html">Videos</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/other.html">Other</a></li>
 						</ul>
 					</li>
 					<li><a href="../Testerdc/contact.html">Contact</a></li>
@@ -65,14 +65,14 @@
 		</div>
 	</header>
 
-	<!-- container -->
+		<!-- container -->
 	<section class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<section id="portfolio" class="page-section section appear clearfix">
 					<br />
 					
-			      				    <p>Mobile learning is not a replacement for traditional learning methods or e-learning courses. More often, mobile learning can supplement and reinforce traditional or formal learning events with informal learning content<br>
+			      				    <p>An instructional video helps companies guide their customers through complications and difficult situations with a simple and well informed visual. Instructional videos help provide knowledge of a product or its working method to the clients in an interactive, effective and engaging way.&nbsp;
 										<br />
                   </p>
 <div class="row">
