--- a/Video.html
+++ b/Video.html
@@ -42,9 +42,9 @@
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="../Testerdc/eLearning.html">eLearning Programs</a></li>
-							<li><a href="../Testerdc/Video.html">Videos</a></li>
-							<li><a href="../Testerdc/other.html">Other</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/eLearning.html">eLearning Programs</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/Video.html">Videos</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/other.html">Other</a></li>
 						</ul>
 					</li>
 					<li><a href="../Testerdc/contact.html">Contact</a></li>
@@ -82,10 +82,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project0.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project0.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project0/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project0/story_html5.html" target="_blank" class="fancybox">
 											<h5>Automotive Client</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -95,10 +95,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project1.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project1.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project1/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project1/story_html5.html" target="_blank" class="fancybox">
 											<h5>Automotive Industry</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -109,10 +109,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project2/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project2/story_html5.html" target="_blank" class="fancybox">
 											<h5>Project 5</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -122,10 +122,10 @@
 
 						<article class="col-sm-4 isotopeItem video">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Video1.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Video1.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Testerdc/Content/Video1.mp4" class="fancybox">
+										<a href="../Deloitte/Content/Video1.mp4" class="fancybox">
 											<h5>Our Framework</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -135,10 +135,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project3.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project3.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project3/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project3/story_html5.html" target="_blank" class="fancybox">
 											<h5>Froject 3</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -148,10 +148,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project4.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project4.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project4/index.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project4/index.html" target="_blank" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -161,10 +161,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project5.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project5.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project5/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project5/story_html5.html" target="_blank" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -174,10 +174,10 @@
 
 						<article class="col-sm-4 isotopeItem other">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Soon2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Testerdc/images/portfolio/Soon2.jpg" class="fancybox">
+										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -187,10 +187,10 @@
 
 						<article class="col-sm-4 isotopeItem other">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Soon2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Testerdc/images/portfolio/Soon2.jpg" class="fancybox">
+										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
