--- a/about.html
+++ b/about.html
@@ -44,9 +44,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <li class="dropdown">
                    	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="../eLearning.html">eLearning Programs</a></li>
-							<li><a href="../Video.html">Videos</a></li>
-							<li><a href="../other.html">Other</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/eLearning.html">eLearning Programs</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/Video.html">Videos</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/other.html">Other</a></li>
 						</ul>
 					</li>
                     </li>
