--- a/eLearning.html
+++ b/eLearning.html
@@ -6,15 +6,15 @@
 	<meta name="description" content="Deloitte Digital Learning - Our Projects">
 	<meta name="author" content="webThemez.com">
 	<title>Deloitte Digital Learning - Our Projects</title>
-	<link rel="favicon" href="../Testerdc/assets/images/favicon.png">
+	<link rel="favicon" href="../Deloitte/assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-	<link rel="stylesheet" href="../Testerdc/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../Testerdc/assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../Deloitte/assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../Deloitte/assets/css/font-awesome.min.css">
 	<!-- Custom styles for our template -->
-	<link rel="stylesheet" href="../Testerdc/assets/css/bootstrap-theme.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="../Testerdc/assets/css/isotope.css" media="screen" />
-	<link rel="stylesheet" href="../Testerdc/assets/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="../Testerdc/assets/css/style.css">
+	<link rel="stylesheet" href="../Deloitte/assets/css/bootstrap-theme.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="../Deloitte/assets/css/isotope.css" media="screen" />
+	<link rel="stylesheet" href="../Deloitte/assets/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="../Deloitte/assets/css/style.css">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
@@ -29,25 +29,25 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-				<a class="navbar-brand" href="../Testerdc/index.html">
-					<img src="../Testerdc/assets/images/logo.png" alt="Techro HTML5 template"></a>
+				<a class="navbar-brand" href="../Deloitte/index.html">
+					<img src="../Deloitte/assets/images/logo.png" alt="Techro HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
-					<li><a href="../Testerdc/index.html">Home</a></li>
-					<li><a href="../Testerdc/about.html">About</a></li>
+					<li><a href="../Deloitte/index.html">Home</a></li>
+					<li><a href="../Deloitte/about.html">About</a></li>
 						<li></li>
 					<li></li>
 					<li class="active"></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="../Testerdc/eLearning.html">eLearning Programs</a></li>
-							<li><a href="../Testerdc/Video.html">Videos</a></li>
-							<li><a href="../Testerdc/other.html">Other</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/eLearning.html">eLearning Programs</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/Video.html">Videos</a></li>
+							<li><a href="https://ottdigitallearning.github.io/Deloitte/other.html">Other</a></li>
 						</ul>
 					</li>
-					<li><a href="../Testerdc/contact.html">Contact</a></li>
+					<li><a href="../Deloitte/contact.html">Contact</a></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -72,7 +72,7 @@
 				<section id="portfolio" class="page-section section appear clearfix">
 					<br />
 					
-			      				    <p><strong>Web-based training (WBT)</strong> is an internet browser-based learning which is also available on local intranet. WBT technologies include streaming audio/video, webinars, forums and instant messaging. WBT is applied by organizations varying in industry and genre, including the military, elementary/secondary schools, colleges, universities and law enforcement. However, this should not be confused with E-Learning 2.0. WBT has many aliases such as e-learning, Internet-based training (IBT) and distance learning.<br>
+			      				    <p>An instructional video helps companies guide their customers through complications and difficult situations with a simple and well informed visual. Instructional videos help provide knowledge of a product or its working method to the clients in an interactive, effective and engaging way.&nbsp;
 										<br />
                   </p>
 <div class="row">
@@ -82,10 +82,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project0.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project0.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project0/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project0/story_html5.html" target="_blank" class="fancybox">
 											<h5>Automotive Client</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -95,10 +95,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project1.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project1.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project1/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project1/story_html5.html" target="_blank" class="fancybox">
 											<h5>Automotive Industry</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -109,10 +109,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project2/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project2/story_html5.html" target="_blank" class="fancybox">
 											<h5>Project 5</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -122,10 +122,10 @@
 
 						<article class="col-sm-4 isotopeItem video">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Video1.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Video1.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Testerdc/Content/Video1.mp4" class="fancybox">
+										<a href="../Deloitte/Content/Video1.mp4" class="fancybox">
 											<h5>Our Framework</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -135,10 +135,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project3.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project3.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project3/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project3/story_html5.html" target="_blank" class="fancybox">
 											<h5>Froject 3</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -148,10 +148,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project4.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project4.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project4/index.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project4/index.html" target="_blank" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -161,10 +161,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project5.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project5.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project5/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project5/story_html5.html" target="_blank" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -174,10 +174,10 @@
 
 						<article class="col-sm-4 isotopeItem other">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Soon2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Testerdc/images/portfolio/Soon2.jpg" class="fancybox">
+										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -187,10 +187,10 @@
 
 						<article class="col-sm-4 isotopeItem other">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Soon2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Testerdc/images/portfolio/Soon2.jpg" class="fancybox">
+										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
