--- a/Video.html
+++ b/Video.html
@@ -6,15 +6,15 @@
 	<meta name="description" content="Deloitte Digital Learning - Our Projects">
 	<meta name="author" content="webThemez.com">
 	<title>Deloitte Digital Learning - Our Projects</title>
-	<link rel="favicon" href="../Testerdc/assets/images/favicon.png">
+	<link rel="favicon" href="../Deloitte/assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-	<link rel="stylesheet" href="../Testerdc/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../Testerdc/assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../Deloitte/assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../Deloitte/assets/css/font-awesome.min.css">
 	<!-- Custom styles for our template -->
-	<link rel="stylesheet" href="../Testerdc/assets/css/bootstrap-theme.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="../Testerdc/assets/css/isotope.css" media="screen" />
-	<link rel="stylesheet" href="../Testerdc/assets/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="../Testerdc/assets/css/style.css">
+	<link rel="stylesheet" href="../Deloitte/assets/css/bootstrap-theme.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="../Deloitte/assets/css/isotope.css" media="screen" />
+	<link rel="stylesheet" href="../Deloitte/assets/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="../Deloitte/assets/css/style.css">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
@@ -29,13 +29,13 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-				<a class="navbar-brand" href="../Testerdc/index.html">
-					<img src="../Testerdc/assets/images/logo.png" alt="Techro HTML5 template"></a>
+				<a class="navbar-brand" href="../Deloitte/index.html">
+					<img src="../Deloitte/assets/images/logo.png" alt="Techro HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
-					<li><a href="../Testerdc/index.html">Home</a></li>
-					<li><a href="../Testerdc/about.html">About</a></li>
+					<li><a href="../Deloitte/index.html">Home</a></li>
+					<li><a href="../Deloitte/about.html">About</a></li>
 						
 					<li class="active">
 					<li class="dropdown">
@@ -46,7 +46,7 @@
 							<li><a href="https://ottdigitallearning.github.io/Deloitte/Other.html">Other</a></li>
 						</ul>
 					</li></li>
-					<li><a href="../Testerdc/contact.html">Contact</a></li>
+					<li><a href="../Deloitte/contact.html">Contact</a></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -246,9 +246,9 @@
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<script src="../Testerdc/assets/js/jquery.cslider.js"></script>
-	<script src="../Testerdc/assets/js/jquery.isotope.min.js"></script>
-	<script src="../Testerdc/assets/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-	<script src="../Testerdc/assets/js/custom.js"></script>
+	<script src="../Deloitte/assets/js/jquery.cslider.js"></script>
+	<script src="../Deloitte/assets/js/jquery.isotope.min.js"></script>
+	<script src="../Deloitte/assets/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+	<script src="../Deloitte/assets/js/custom.js"></script>
 </body>
 </html>
