--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Real Estate Builders Free Responsive Website Templates - icon">
+    <meta name="description" content="Deloitte Digital Learning">
     <meta name="author" content="webThemez.com">
-    <title>Real Estate Free Responsive Website Templates - icon</title>
+    <title>Deloitte Digital Learning</title>
     <link rel="favicon" href="assets/images/favicon.png">
     <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
