--- a/about.html
+++ b/about.html
@@ -40,14 +40,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="eLearning.html">eLearning</a></li>
-							<li><a href="Video.html">Video</a></li>
-							<li><a href="Other.html">Other</a></li>
-						</ul>
-					</li>
+					<li><a href="eLearning.html">eLearning</a></li>
+					<li><a href="Video.html">Video</a></li>
+					<li><a href="Other.html">Other Projects</a></li>
 					<li><a href="contact.html">Contact</a></li>
 
 				</ul>
@@ -72,24 +67,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="row">
             <!-- main content -->
             <section class="col-sm-8 maincontent col-lg-12">
-                <h3>What the modern learner demands from us:</h3>
-                <p> <img src="assets/images/Learner.png" alt="" class="img-rounded pull-right" width="300"> 
-              <ul>
-				<li><strong><span class="strong" style="color:#86BC25">More micro learnings:</strong></span> &nbsp; A limited attention span requires attention well used. Learning nuggets should not exceed six minutes per nugget.&nbsp;</li>
-              <li><strong><span class="strong" style="color:#86BC25">An aligned and productive workplace:</strong></span> &nbsp; Disruptions need to be avoided or limited.&nbsp;</li>
-              <li><strong><span class="strong" style="color:#86BC25">More mobile learning:</strong></span> &nbsp; Step away from classroom and LMS based learning offers only. The modern learner is ‘always on’ and requires content whenever and wherever needed.&nbsp;</li>
-              <li><strong><span class="strong" style="color:#86BC25">More learning opportunities:</strong></span> &nbsp; Time to spend on training is not sufficient. Why? Because learning nowadays still requires stepping back from business obligations. We need to embed learning into business, into the flow of work.&nbsp;</li>
-                <li><strong><span class="strong" style="color:#86BC25">Acknowledgement of the willingness to learn:</strong></span> &nbsp; Offer a greater variety of different learning possibilities, e.g. micro and macro, formal and informal learning etc. </li>
-				</ul>
-				</p>
+                <h3>Our Digital Learning Team</h3>
+                <p>
+		
+				 <p>The Team in Bucharest was founded out of our Human Capital Practice in 2018 and has expertise in instructional design for digital learning solutions, e.g. in designing, developing, and implementing eLearnings, instructional videos, awareness videos etc.</p> 
+				<p>In total, the team consists of five consultants with different areas of expertise, however following a holistic collaboration approach in order to fulfill projects’ requirements.&nbsp;</p>
+
 <p>&nbsp;</p>
-              <h3>Our Framework</h3>
-              <p>&nbsp;</p>
-            <span style="color: #86BC25"><img src="assets/images/Framework.png" alt=""/></span>            </section>
-            <!-- /main -->
-
-            <!-- Sidebar -->            <!-- /Sidebar -->
-
+            
         </div>
     </section>
     <!-- /container -->
@@ -97,8 +82,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>We use a Structured ADDIE metodology</h3>
-                  <p>Based on our experience, we use the following process model* for the conception and development of digital learning solutions.</p>
+                  <h3>Structured ADDIE Methodology</h3>
+                  <p>To develop engaging digital learning solutions, we are leveraging a mix of comprehensive content development methods such as ADDIE and agile ADDIE models.</p>
                   <p>&nbsp;</p>
                     <img src="assets/images/Addie.png" alt=""/>
 <p>&nbsp;</p>
@@ -110,12 +95,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                   <p>&nbsp;</p>
                   <img src="assets/images/Approach.png" alt=""/>
 <p>&nbsp;</p>
+			  <div class="row">
+              <div class="col-md-12">
+                <h3>Effort Drivers</h3>
+                  <p>Effort drivers and synergies for content development
+                </p>
+                  <p>&nbsp;</p>
+                  <img src="assets/images/Efforts.png" alt=""/>
+<p>&nbsp;</p>
                   <br />
                 </div>
                   <br />
                 </div>
-            </div>
-    
+            </div>  
                   <br />
                 </div>
             </div>
