--- a/eLearning.html
+++ b/eLearning.html
@@ -36,12 +36,10 @@
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="eLearning.html">eLearning</a></li>
-							<li><a href="Video.html">Video</a></li>
-							<li><a href="Other.html">Other</a></li>
+					<li><a href="eLearning.html">eLearning</a></li>
+					<li><a href="Video.html">Video</a></li>
+					<li><a href="Other.html">Other Projects</a></li>
+					<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</li>
 					<li><a href="contact.html">Contact</a></li>
