--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Deloitte Digital Learning">
 	<meta name="author" content="webThemez.com">
-	<title>Deloitte Digital Learning</title>
-	<link rel="favicon" href="assets/images/favicon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Deloitte Digital Learning</title>
+    <link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css"> 
+    <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css"> -->
+    <link href="css/bootstrap-3.4.1.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css"> 
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen"> 
 	<link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" id="camera-css"  href="assets/css/camera.css" type="text/css" media="all"> 
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <link rel="stylesheet" id="camera-css"  href="assets/css/camera.css" type="text/css" media="all">
+<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
 	<script src="assets/js/respond.min.js"></script>
@@ -39,14 +41,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portofolio<b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="eLearning.html">eLearning</a></li>
-							<li><a href="Video.html">Video</a></li>
-							<li><a href="Other.html">Other</a></li>
-						</ul>
-					</li>
+					<li><a href="eLearning.html">eLearning</a></li>
+					<li><a href="Video.html">Video</a></li>
+					<li><a href="Other.html">Other Projects</a></li>
 					<li><a href="contact.html">Contact</a></li>
 
 				</ul>
@@ -65,7 +62,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       	</div> 
           <p>We recognize the learning industry has undergone significant changes that have upended the status quo. The forces of the Fourth Industrial Revolution are challenging your core learning technology stack, the skills of your team, the development “contract” between the organization and employees, and the ways you interact with the learners and leaders in your organization.&nbsp;</p>
           <p>Deloitte’s Digital Learning Experience capability provides end-to-end advisory and implementation services to transform your organization’s approach to meeting the demands of the modern learner. We understand how a next-generation learning strategy can enhance employee engagement, strengthen the employment value proposition, and drive business outcomes.</p>
-          <p class="text-center"> <iframe width="560" height="315" src="https://www.youtube.com/embed/aJczxdUE708?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </p>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="assets/images/Deloitte Digital.mp4"></iframe>
+          </div>
         </div>
         </div>
 		</div>
@@ -152,7 +151,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    
   <section id="packages" class="secpadding">
         <div class="container">
-             <h2><span>Completed Projects</span></h2>
+             <h2><span>Project Examples</span></h2>
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                             <div class="cuadro_intro_hover " style="background-color:#cccccc;">
@@ -162,7 +161,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="caption">
                                     <div class="blur"></div>
                                     <div class="caption-text">
-                                        <h3>Automotive Industry</h3> 
+                                        <h3>Process Training <br>
+                                        (Quality Management)</h3> 
                                         <a class=" btn btn-default" href="https://ottdigitallearning.github.io/Deloitte/Content/Project0/story_html5.html" target="_blank" class="fancybox">Launch E-Learning</i></a>
                                     </div>
                                 </div>
@@ -177,7 +177,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="caption">
                                     <div class="blur"></div>
                                     <div class="caption-text">
-                                         <h3>Deloitte Deal</h3> 
+                                         <h3>System Training<br>
+                                           (CRM Tool)<br>
+                                         </h3> 
                                         <a class="btn btn-default" href="https://ottdigitallearning.github.io/Deloitte/Content/Project2/story_html5.html" target="_blank" class="fancybox">Launch E-Learning</i></a>
                                     </div>
                                 </div>
@@ -192,7 +194,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="caption">
                                     <div class="blur"></div>
                                     <div class="caption-text">
-                                        <h3>Automotive Industry</h3> 
+                                        <h3>Sales Training<br>
+                                          (Customer Management)<br>
+                                        </h3> 
                                         <a class="btn btn-default" href="https://ottdigitallearning.github.io/Deloitte/Content/Project1/story_html5.html" target="_blank">Launch E-Learning</i></a>
                                     </div>
                                 </div>
@@ -207,7 +211,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="caption">
                                     <div class="blur"></div>
                                     <div class="caption-text">
-                                         <h3>Automotive Industry</h3> 
+                                         <h3>System Training <br>
+                                         (Performance Management)</h3> 
                                         <a class=" btn btn-default" href="https://ottdigitallearning.github.io/Deloitte/Content/Project3/story_html5.html" target="_blank" class="fancybox">Launch E-Learning</i></a>
                                     </div>
                                 </div>
@@ -225,10 +230,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     
     <script type='text/javascript' src='assets/js/jquery.mobile.customized.min.js'></script>
     <script type='text/javascript' src='assets/js/jquery.easing.1.3.js'></script> 
-    <script type='text/javascript' src='assets/js/camera.min.js'></script> 
-    <script src="assets/js/bootstrap.min.js"></script> 
-	<script src="assets/js/custom.js"></script>
-    <script>
+    <script type='text/javascript' src='assets/js/camera.min.js'></script>
+    <!-- <script src="assets/js/bootstrap.min.js"></script> -->
+    <script src="js/bootstrap-3.4.1.js"></script>
+    <script src="assets/js/custom.js"></script> <script>
 		jQuery(function(){
 			
 			jQuery('#camera_wrap_4').camera({
